--- a/views/pages/error/exception.pug
+++ b/views/pages/error/exception.pug
@@ -1,4 +1,4 @@
-extends ../layouts/main
+extends ../../layouts/main
 
 block content
   h1 Server error
@@ -7,4 +7,4 @@ block content
   button.back Back
   button.link(data-href='/') Main
 
-  script(src='/button.js')
+  script(src='/vendor.js')
