--- a/views/pages/guest.pug
+++ b/views/pages/guest.pug
@@ -7,4 +7,4 @@ block content
   button.link(data-href='/signup') Sign Up
   button.link(data-href='/login') Login
 
-  script(src='/button.js')
+  script(src='/vendor.js')
