Add ticket controller

--- a/views/pages/member/signup.pug
+++ b/views/pages/member/signup.pug
@@ -4,6 +4,7 @@ block content
   h1 Signup
   p Signup account
 
+  input#key(type='hidden' value=key)
   input#email(type='text' placeholder='email')
   input#password(type='text' placeholder='password')
   input#confirm(type='text' placeholder='password confirm')
