Fix signup password input

--- a/views/pages/member/signup.pug
+++ b/views/pages/member/signup.pug
@@ -8,8 +8,8 @@ block content
   input#csrf(type='hidden' value=csrf)
 
   input#email(type='text' placeholder='email')
-  input#password(type='text' placeholder='password')
-  input#confirm(type='text' placeholder='password confirm')
+  input#password(type='password' placeholder='password')
+  input#confirm(type='password' placeholder='password confirm')
 
   button.action(data-type='signup') Signup
 
