--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -4,7 +4,7 @@ html(lang='en')
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no')
     meta(name='description', content= description || 'Simple-SNS')
-    title= title || 'Simple-sns'
+    title= title || 'Simple-SNS'
     block head
   body
     block content
