Fix login password input

--- a/views/pages/member/login.pug
+++ b/views/pages/member/login.pug
@@ -11,6 +11,6 @@ block content
   input#csrf(type='hidden' value= csrf)
 
   input#email(type='text' placeholder='email')
-  input#password(type='text' placeholder='password')
+  input#password(type='password' placeholder='password')
 
   button#login Login
