Add client page

--- a/views/pages/main/client.pug
+++ b/views/pages/main/client.pug
@@ -2,7 +2,7 @@ extends ../../layouts/main
 
 block content
   h1 Simple - SNS
-  p Sign up now!
+  p= `Welcome ${user.nickname || user.email}`
 
   button.link(data-href='/signup') Sign Up
   button.link(data-href='/login') Login
