--- a/views/pages/main/client.pug
+++ b/views/pages/main/client.pug
@@ -3,3 +3,5 @@ extends ../../layouts/main
 block content
   h1 Simple - SNS
   p= `Welcome ${user.nickname || user.email}`
+
+  button.link(data-href='/logout') Logout
